grafana/prod/alert-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-alerting
  namespace: guardian
spec:
  type: ClusterIP
  clusterIP: 'None'
  ports:
    - port: 9094
  selector:
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana
