grafana/prod/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: guardian
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.naturalselectionlabs.com`)
      services:
        - name: grafana
          port: 80
